fix(auth): fix checkbox color on Firefox

--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -66,7 +66,8 @@
 
     &::before {
       display: inline-block;
-      font-family: system-ui;
+      color: variables.$black;
+      font-family: arial, sans-serif;
       font-weight: 600;
       font-size: 0;
       content: 'L';
